[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive", "env"] }
color-eyre = "0.6.2"
open = "3.2.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }
