[package]
name = "problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
either = "1.8.0"
humantime = "2.1.0"
itertools = "0.10.5"
ndarray = "0.15.6"
petgraph = "0.6.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.11.0", features = ["flamegraph"] }

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false


[[bench]]
name = "day3"
harness = false


[[bench]]
name = "day4"
harness = false


[[bench]]
name = "day5"
harness = false


[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

                    [[bench]]
                    name = "day13"
                    harness = false
                
